--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -56,7 +56,7 @@
             <version>2.5</version>
             <scope>provided</scope>
         </dependency>
-        <!--Nacos 注册中心-->
+        <!--Nacos 服务发现-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
@@ -65,12 +65,6 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
-        <!--nacos 服务发现-->
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-            <version>2021.0.5.0</version>
         </dependency>
         <!--Nacos 配置中心-->
         <dependency>
