--- a/gulimall_gateway/src/main/resources/bootstrap.yaml
+++ b/gulimall_gateway/src/main/resources/bootstrap.yaml
@@ -6,6 +6,6 @@ spring:
         file-extension: yaml # 文件后缀名
         namespace: aa943bb6-d546-499f-b6b1-132d4f4bd212
         extension-configs:
-          - data-id: gulimall_gateway.yaml
+          - data-id: gulimall-gateway.yaml
             group: DEFAULT_GROUP
             refresh: true
