--- a/renren-fast/pom.xml
+++ b/renren-fast/pom.xml
@@ -51,6 +51,12 @@
 	</properties>
 
 	<dependencies>
+		<!--gulimall_common-->
+		<dependency>
+			<groupId>com.project</groupId>
+			<artifactId>gulimall-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
