--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -68,6 +68,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <!--负载均衡-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+
         <!--Nacos 配置中心-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
