--- a/gulimall-product/src/main/resources/application.yaml
+++ b/gulimall-product/src/main/resources/application.yaml
@@ -12,7 +12,12 @@ spring:
       discovery:
         server-addr: 127.0.0.1:8848
 
-
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 5000 # 连接超时时间，单位毫秒
+        readTimeout: 60000 # 读取超时时间，单位毫秒
 
 
 
