--- a/gulimall-gateway/pom.xml
+++ b/gulimall-gateway/pom.xml
@@ -10,7 +10,7 @@
         <relativePath/>
     </parent>
 
-    <artifactId>gulimall_gateway</artifactId>
+    <artifactId>gulimall-gateway</artifactId>
     <description>网关</description>
 
     <dependencies>
