--- a/gulimall-ware/src/main/resources/application.yaml
+++ b/gulimall-ware/src/main/resources/application.yaml
@@ -1,22 +1,21 @@
 spring:
-  datasource:
-    username: root
-    password: 123
-    url: jdbc:mysql://127.0.0.1:3306/gulimall_wms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
-    driver-class-name: com.mysql.cj.jdbc.Driver
-
   application:
     name: gulimall-ware
   cloud:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+#  datasource:
+#    username: root
+#    password: 123
+#    url: jdbc:mysql://127.0.0.1:3306/gulimall_wms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
+#    driver-class-name: com.mysql.cj.jdbc.Driver
 
-mybatis-plus:
-  mapper-locations: classpath:/mapper/**/*.xml
-  global-config:
-    db-config:
-      id-type: auto # 主键自增
+#mybatis-plus:
+#  mapper-locations: classpath:/mapper/**/*.xml
+#  global-config:
+#    db-config:
+#      id-type: auto # 主键自增
 
 #server:
 #  port: 11000
