--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<module>gulimall-ware</module>
 		<module>renren-fast</module>
 		<module>renren-generator</module>
-        <module>gulimall_gateway</module>
+        <module>gulimall-gateway</module>
         <module>gulimall-third-party</module>
     </modules>
 
