# 11. 商城业务（Elasticsearch、spu 商品上架）

--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -94,6 +94,13 @@
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
         </dependency>
+        <!-- fastjson 1.x -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.83</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
