--- a/gulimall-search/src/main/resources/application.yaml
+++ b/gulimall-search/src/main/resources/application.yaml
@@ -5,14 +5,14 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
-  jackson:
-    date-format: yyyy-MM-dd HH:mm:ss
-feign:
-  client:
-    config:
-      default:
-        connectTimeout: 5000 # 连接超时时间，单位毫秒
-        readTimeout: 60000 # 读取超时时间，单位毫秒
-logging:
-  level:
-    com.project.gulimall.search: debug
+#  jackson:
+#    date-format: yyyy-MM-dd HH:mm:ss
+#feign:
+#  client:
+#    config:
+#      default:
+#        connectTimeout: 5000 # 连接超时时间，单位毫秒
+#        readTimeout: 60000 # 读取超时时间，单位毫秒
+#logging:
+#  level:
+#    com.project.gulimall.search: debug
