# 13. 性能压测、缓存使用

--- a/gulimall-product/src/main/resources/application.yaml
+++ b/gulimall-product/src/main/resources/application.yaml
@@ -15,6 +15,11 @@ spring:
   thymeleaf:
     cache: false
 
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    password: 123
+
 
 feign:
   client:
