--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -94,11 +94,11 @@
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
         </dependency>
-        <!-- fastjson 1.x -->
+        <!--fastjson-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.83</version>
+            <version>2.0.32</version>
         </dependency>
 
     </dependencies>
