--- a/gulimall-product/src/main/resources/application.yaml
+++ b/gulimall-product/src/main/resources/application.yaml
@@ -19,7 +19,13 @@ spring:
     host: 127.0.0.1
     port: 6379
     password: 123
-
+  cache:
+    type: redis # 明确指定使用redis作为缓存实现
+    redis:
+      time-to-live: 3600000 # 缓存 ttl，单位毫秒
+      key-prefix: CACHE_ # 设置缓存 key 前缀
+      use-key-prefix: true # 是否开启前缀
+      cache-null-values: true # 是否缓存空值
 
 feign:
   client:
