--- a/gulimall-search/pom.xml
+++ b/gulimall-search/pom.xml
@@ -58,6 +58,19 @@
 			<artifactId>elasticsearch-rest-high-level-client</artifactId>
 			<version>7.12.1</version>
 		</dependency>
+
+		<!--thymeleaf-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<!--devtools-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
+
 	</dependencies>
 
 	<build>
