# 21. 商品详情代码的异步编排优化、认证服务（验证码、用户注册）

--- a/gulimall-product/src/main/resources/application.yaml
+++ b/gulimall-product/src/main/resources/application.yaml
@@ -28,6 +28,11 @@ spring:
       cache-null-values: true # 是否缓存空值
       null-value-ttl: 2m # null 占位 TTL
 
+#gulimall:
+#  thread:
+#    core-pool-size: 20
+#    max-pool-size: 200
+#    keep-alive-time: 10
 
 feign:
   client:
