--- a/gulimall-third-party/pom.xml
+++ b/gulimall-third-party/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>spring-cloud-starter-alicloud-oss</artifactId>
             <version>2.2.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.26</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
