# 22. 用户注册、登录、GitHub 账号登录、session 共享问题

--- a/gulimall-auth-server/src/main/resources/application.yaml
+++ b/gulimall-auth-server/src/main/resources/application.yaml
@@ -12,11 +12,17 @@ spring:
     password: 123
 
 
+  devtools:
+    restart:
+      enabled: false
+
 #  thymeleaf:
 #    cache: false
 
-#server:
 logging:
   level:
     com.gulimall.gulimallauthserver: debug
-#  port: 20000
+
+
+
+
