--- a/gulimall-search/src/main/resources/application.yaml
+++ b/gulimall-search/src/main/resources/application.yaml
@@ -5,6 +5,10 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+
+  devtools:
+    restart:
+      enabled: false
 #  jackson:
 #    date-format: yyyy-MM-dd HH:mm:ss
 #feign:
