# 26. 订单确认页功能、远程调用请求头丢失问题

--- a/gulimall-cart/src/main/resources/application.yaml
+++ b/gulimall-cart/src/main/resources/application.yaml
@@ -24,5 +24,9 @@ gulimall:
     max-pool-size: 200
     keep-alive-time: 10
 
+
 #server:
+logging:
+  level:
+    com.project.gulimall.cart: debug
 #  port: 10000
