--- a/gulimall-order/src/main/resources/application.yaml
+++ b/gulimall-order/src/main/resources/application.yaml
@@ -26,6 +26,17 @@ spring:
       simple:
         acknowledge-mode: manual # 手动 ack 消息
 
+  thymeleaf:
+    cache: false
+
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    password: 123
+
+  session:
+    store-type: redis
+    timeout: 30m
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
@@ -36,6 +47,19 @@ mybatis-plus:
 logging:
   level:
     com.project.gulimall.order: debug
+
+gulimall:
+  thread:
+    core-pool-size: 20
+    max-pool-size: 200
+    keep-alive-time: 10
+
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 5000 # 连接超时时间，单位毫秒
+        readTimeout: 60000 # 读取超时时间，单位毫秒
 
 #server:
 #  port: 9000
