--- a/gulimall-cart/pom.xml
+++ b/gulimall-cart/pom.xml
@@ -41,11 +41,11 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
         <!--devtools-->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
-        </dependency>
+        </dependency>-->
 
         <!--redis-->
         <dependency>
