--- a/gulimall-member/src/main/resources/application.yaml
+++ b/gulimall-member/src/main/resources/application.yaml
@@ -12,6 +12,18 @@ spring:
       discovery:
         server-addr: 127.0.0.1:8848
 
+  thymeleaf:
+    cache: false
+
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    password: 123
+
+  session:
+    store-type: redis
+    timeout: 30m
+
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
