--- a/gulimall-order/pom.xml
+++ b/gulimall-order/pom.xml
@@ -56,11 +56,11 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		<!--devtools-->
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
-		</dependency>
+		</dependency>-->
 
 		<!--redis-->
 		<dependency>
@@ -73,6 +73,14 @@
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session-data-redis</artifactId>
 		</dependency>
+
+		<!--支付宝 SDK-->
+		<dependency>
+			<groupId>com.alipay.sdk</groupId>
+			<artifactId>alipay-sdk-java</artifactId>
+			<version>4.40.440.ALL</version>
+		</dependency>
+
 
     </dependencies>
 
