--- a/gulimall-order/src/main/resources/application.yaml
+++ b/gulimall-order/src/main/resources/application.yaml
@@ -38,6 +38,9 @@ spring:
     store-type: redis
     timeout: 30m
 
+  mvc:
+    date-format: yyyy-MM-dd HH:mm:ss
+
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
@@ -61,7 +64,6 @@ feign:
       default:
         connectTimeout: 5000 # 连接超时时间，单位毫秒
         readTimeout: 60000 # 读取超时时间，单位毫秒
-
 
 
 #server:
