--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>gulimall-gateway</module>
         <module>gulimall-third-party</module>
         <module>gulimall-cart</module>
+        <module>gulimall-seckill</module>
     </modules>
 
 </project>
