--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -118,6 +118,18 @@
             <version>1.8.6</version>
         </dependency>
 
+        <!--sleuth-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <dependencyManagement>
